# CarbonMonitor

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_work.yml
.github/workflows/: ci.yml
assets/: CarbonTrace Prototype (standalone).html
backend/: .dockerignore  Dockerfile  README.md  config.py  create_admin.py  database.py  dependencies.py  main.py  pyproject.toml  security.py
backend/models/: __init__.py  activity_record.py  calculated_emission.py  emission_factor.py  facility.py  recommendation.py  role.py  scenario.py  session.py  upload.py  user.py
backend/routers/: activity.py  anomalies.py  auth.py  calculations.py  emissions.py  facilities.py  recommendations.py  reports.py  scenarios.py  upload.py
backend/schemas/: activity_record.py  anomaly.py  auth.py  calculated_emission.py  emission_factor.py  emissions.py  facility.py  reading.py  recommendation.py  scenario.py  upload.py  user.py
backend/services/: README.md  anomaly.py  calculation.py  emissions.py  es.py  ocr.py  recommendations.py  report.py  scenario.py  sessions.py  uploads.py
backend/worker/: README.md  generator.py  run.py  scheduler.py  shipper.py
backend/worker/sources/: __init__.py  _common.py  carbon_interface.py  electricity_maps.py  openweather.py
elk/kibana/: README.md
elk/logstash/pipeline/: logstash.conf
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
nginx/: nginx.conf
(+15 files in other folders)
